--- a/freestyle.html
+++ b/freestyle.html
@@ -21,7 +21,7 @@ title="Freestyle" frameborder="0" allowfullscreen></iframe>
 	<br>
 	<h3>Zpět na hlavní stranu:</h3>
 <ul>
-	<li><a href="streetdance.html">Street dance</a></li>
+	<li><a href="index.html">Street dance</a></li>
 </ul>	
 	<h3>Jiná podtémata:</h3>
 <ul>
@@ -33,5 +33,6 @@ title="Freestyle" frameborder="0" allowfullscreen></iframe>
 <ul>
 	<li><a href="znamesvetovesouteze.html">Známé světové soutěže</a></li>
 </ul>
+
 
 </body>
