--- a/puvod.html
+++ b/puvod.html
@@ -18,7 +18,7 @@
 	<br>
 	<h3>Zpět na hlavní stranu:</h3>
 <ul>
-	<li><a href="streetdance.html">Street dance</a></li>
+	<li><a href="index.html">Street dance</a></li>
 </ul>	
 	<h3>Jiná podtémata:</h3>
 <ul>
@@ -30,5 +30,6 @@
 <ul>
 	<li><a href="znamesvetovesouteze.html">Známé světové soutěže</a></li>
 </ul>
+
 
 </body>
