--- a/znamesvetovesouteze.html
+++ b/znamesvetovesouteze.html
@@ -19,7 +19,7 @@
 	<br>
 	<h3>Zpět na hlavní stranu:</h3>
 <ul>
-	<li><a href="streetdance.html">Street dance</a></li>
+	<li><a href="index.html">Street dance</a></li>
 </ul>	
 	<h3>Jiná podtémata:</h3>
 <ul>
@@ -31,4 +31,5 @@
 <ul>
 	<li><a href="freestyle.html">Freestyle</a></li>
 </ul>
+
 </body>
